Sites/Site/objects/Job_Advertisement__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_name__c</fullName>
        <label>Manager name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalaryMax__c</fullName>
        <label>SalaryMax</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalaryMin__c</fullName>
        <label>SalaryMin</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <label>Skills Required</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>On hold</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <inlineHelpText>Manager&apos;s phone</inlineHelpText>
        <label>phone</label>
        <type>Phone</type>
    </fields>
    <label>Job Advertisement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SalaryMin__c</columns>
        <columns>SalaryMax__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>email__c</columns>
        <columns>Manager_name__c</columns>
        <columns>Status__c</columns>
        <columns>phone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Advertisements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>